### PyDrizzle Revision Changes
Version 5.2.6 (5-Oct-2004) WJH
      - Output product name no longer all lower-case, but rather uses the 
        exact case specified by the user in the ASN table.
Version 5.2.5 (29-Sept-2004) WJH
      - Insured that all input EXPTIME values are non-zero by setting
        any EXPTIME that is read in with a value of 0.0 to a value of 1.0.
Version 5.2.4 (28-Sept-2004) WJH
      - Restored 'bits' as PyDrizzle input parameter, allowing it to update
        the value internally, rather than forcing the user to always set it.
Version 5.2.3 (27-Sept-2004) CJH
      - Removed diagnostic print statments relating to the use of DGEO files
        in the exposure.py module.
Version 5.2.2 (21-Sept-2004) WJH
      - Fixed offset problems when dealing with subarrays so they align with
        full images.
      - Subarray and WFPC2 chip-to-chip offsets correctly determined using
        wcsfit while reproducing 'exactly' what 'wdrizzle' would produce
        for full-frame and subarray images. Many, many changes were needed
        to get this working.   
Version 5.2.0 (17-Sept-2004) WJH
      - Support for subarrays significantly revised so that multi-chip 
        images with LTV values get processed correctly, and so that subarrays
        align properly with full frame images at the same pointing.
      - Changed search algorithm for building 'coeffs' name to start at
        end of input image name when looking for rootname. 
Version 5.1.4 (7-Sept-2004) WJH
      - Changed references of header['detector'] to header[self.DETECTOR_NAME]
        to account for lack of 'detector' keyword in NICMOS headers. This change
        affected drutil, fileutil and __init__.
      - Changed naming convention for MEF DQ files associated with input
        WFPC2 GEIS images.
Version 5.1.3 (30-August-2004) WJH
      - Eliminated generation of context image for single drizzling.
      - Changed usage of chip for 'computeCubicCoeffs' to rely instead on